--- a/modules/teams/client/views/form-team.client.view.html
+++ b/modules/teams/client/views/form-team.client.view.html
@@ -1,10 +1,16 @@
-<section>
+<section ng-init="isUpload(true)">
   <div class="page-header">
     <h1>{{vm.team._id ? 'Edit Team' : 'New Team'}}</h1>
   </div>
   <div class="col-md-12">
     <form name="vm.form.teamForm" class="form-horizontal" ng-submit="vm.save(vm.form.teamForm.$valid)" novalidate>
       <fieldset>
+        <div class="form-group" style="text-align:center;">
+          <!-- <label class="control-label" for="image">Profile Image</label> -->
+          <img src="{{vm.imageShow()}}" alt="" style="width:10em; height:10em;">
+          <input type="file" id="dddd" ng-model="vm.team.image" onchange="angular.element(this).scope().fileNameChanged(this)">
+          <button type="button" ng-click="vm.uploadImage(vm.team.image)">Upload</button>
+        </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="firstname">First Name</label>
           <input name="firstname" type="text" ng-model="vm.team.firstname" id="firstname" class="form-control" placeholder="First Name">
@@ -16,10 +22,6 @@
         <div class="form-group" show-errors>
           <label class="control-label" for="nickname">Nick Name</label>
           <input name="nickname" type="text" ng-model="vm.team.nickname" id="nickname" class="form-control" placeholder="Last Name">
-        </div>
-        <div class="form-group" show-errors>
-          <label class="control-label" for="image">Profile Image</label>
-          <input name="image" type="text" ng-model="vm.team.image" id="image" class="form-control" placeholder="Image">
         </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="tel">Tel</label>
