--- a/modules/news/client/views/form-news.client.view.html
+++ b/modules/news/client/views/form-news.client.view.html
@@ -5,6 +5,17 @@
   <div class="col-md-12">
     <form name="vm.form.newsForm" class="form-horizontal" ng-submit="vm.save(vm.form.newsForm.$valid)" novalidate>
       <fieldset>
+        <div class="form-group" style="text-align:center;">
+          <img src="{{vm.imageShow()}}" class="img-thumbnail" style="width:50em; height:20em; object-fit: cover;">
+        </div>
+        <div class="form-group" style="text-align:center;">
+          <span class="btn btn-default btn-file">
+            Select Image
+            <input type="file" id="dddd" onchange="angular.element(this).scope().uploadImage()">
+          </span>
+          <!-- <input type="file" id="dddd" ng-model="vm.team.image" onchange="angular.element(this).scope().fileNameChanged(this)">
+              <button type="button" ng-click="vm.uploadImage(vm.team.image)">Upload</button> -->
+        </div>
         <div class="form-group" show-errors>
           <label class="control-label" for="name">Name</label>
           <input name="name" type="text" ng-model="vm.news.name" id="name" class="form-control" placeholder="Name" required>
@@ -16,10 +27,10 @@
           <label class="control-label" for="name">Detail</label>
           <input name="detail" type="text" ng-model="vm.news.detail" id="detail" class="form-control" placeholder="Detail">
         </div>
-        <div class="form-group" show-errors>
+        <!-- <div class="form-group" show-errors>
           <label class="control-label" for="name">Image</label>
           <input name="image" type="text" ng-model="vm.news.image" id="image" class="form-control" placeholder="Image">
-        </div>
+        </div> -->
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.news._id ? 'Update' : 'Create'}}</button>
         </div>
