--- a/modules/downloads/client/views/view-download.client.view.html
+++ b/modules/downloads/client/views/view-download.client.view.html
@@ -1,6 +1,9 @@
 <section>
   <div class="page-header">
-    <h1 ng-bind="vm.download.name"></h1>
+    <h1 ng-bind="vm.download.title"></h1>
+  </div>
+  <div>
+    <h5 ng-bind="vm.download.url"></h5>
   </div>
   <div class="pull-right"
        ng-show="vm.download.isCurrentUserOwner">
