--- a/modules/news/client/views/form-news.client.view.html
+++ b/modules/news/client/views/form-news.client.view.html
@@ -6,7 +6,7 @@
     <form name="vm.form.newsForm" class="form-horizontal" ng-submit="vm.save(vm.form.newsForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" style="text-align:center;">
-          <img src="{{vm.imageShow()}}" class="img-thumbnail" style="width:50em; height:20em; object-fit: cover;">
+          <img src="{{vm.imageShow()}}" class="img-thumbnail" style="height:20em; object-fit: cover;">
         </div>
         <div class="form-group" style="text-align:center;">
           <span class="btn btn-default btn-file">
