--- a/modules/news/client/views/view-news.client.view.html
+++ b/modules/news/client/views/view-news.client.view.html
@@ -2,6 +2,12 @@
   <div class="page-header">
     <h1 ng-bind="vm.news.name"></h1>
   </div>
+  <div class="text-center">
+    <img src="{{vm.news.image}}" width="50%">
+  </div>
+  <div style="margin-top: 20px;">
+    <p ng-bind="vm.news.detail"></p>
+  </div>
   <div class="pull-right"
        ng-show="vm.news.isCurrentUserOwner">
     <a class="btn btn-primary"
