--- a/modules/teams/client/views/form-team.client.view.html
+++ b/modules/teams/client/views/form-team.client.view.html
@@ -15,7 +15,7 @@
           </span>
         </div> -->
         <div class="form-group" style="text-align:center;">
-          <img src="{{vm.imageShow()}}" class="img-thumbnail user-profile-picture" style="width:10em; height:10em;">
+          <img src="{{vm.imageShow()}}" class="img-thumbnail user-profile-picture" style="height:20em; object-fit: cover;">
         </div>
         <div class="form-group" style="text-align:center;">
           <span class="btn btn-default btn-file">
