--- a/modules/news/client/views/list-news.client.view.html
+++ b/modules/news/client/views/list-news.client.view.html
@@ -18,7 +18,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-4" ng-repeat="news in vm.news">
       <div class="thumbnail">
-        <img src="{{news.image}}" style="width:100%">
+        <img src="{{news.images[0]}}" style="width:100%; height: 300px; object-fit: cover;">
         <div class="caption">
           <h3 style="  text-overflow: ellipsis;
           white-space: nowrap;
