--- a/modules/news/client/views/form-news.client.view.html
+++ b/modules/news/client/views/form-news.client.view.html
@@ -9,7 +9,7 @@
           <img src="{{news}}" class="img-thumbnail" style="height:20em; width: 20em; object-fit: cover;">
           <div class="col-md-12" style="text-align:center; padding-top: 20px;">
             <span class="btn btn-default btn-file" style="border-top: 20px;">
-              Add Image
+              {{news == 'modules/news/client/img/add.jpg' ? 'Add Image' : 'Change Image'}}
               <input type="file" id="dddd{{$index}}" ng-click="setindex($index)" onchange="angular.element(this).scope().uploadImage()">
             </span>
           </div>
