--- a/modules/downloads/client/views/list-downloads.client.view.html
+++ b/modules/downloads/client/views/list-downloads.client.view.html
@@ -15,10 +15,10 @@
       <tbody>
         <tr ng-repeat="download in vm.downloads" ng-click="vm.viewDetail(download._id)">
           <td>{{$index+1}}</td>
-          <td  style="  text-overflow: ellipsis;
+          <td style="text-overflow: ellipsis;
           white-space: nowrap;
-          overflow: hidden;">{{download.title}}</td>
-          <td>{{download.url}}</td>
+          overflow: hidden;">{{vm.subStr(download.title)}}</td>
+          <td>{{vm.subStr(download.url)}}</td>
           <td>{{download.created | date:'dd/MM/yyyy'}}</td>
         </tr>
       </tbody>
